fix: medidas dos gaps modificadas de px para rem

--- a/css/base.css
+++ b/css/base.css
@@ -24,7 +24,7 @@ main {
 }
 .hero-buttons {
     display: flex;
-    gap: 16px;
+    gap: 1rem;
 }
 
 .btn-outline {
