--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     padding: 0;
-    gap: 12px;
+    gap: 0.75rem;
 }
 
 .footer-nav strong {
@@ -45,7 +45,7 @@
 .footer-nav li a {
     color: #EDEDED;
     font-size: 1.25rem;
-    gap:16px;
+    gap:1rem;
     padding: 16px;
     white-space: nowrap;
 }
@@ -73,7 +73,7 @@
 
 .footer-social ul {
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .footer-social ul li a:hover img {
